implemented express router

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -32,10 +32,10 @@
             <div class="mb-3 mt-3">
                 <label for="rating">Rating</label><br>
                 <input class="form-range" name="review[rating]" type="range" min="1" max="5" id="rating"><br>
-                <output for="customRange4" id="rangeValue" aria-hidden="true"></output>
+                <!-- <output for="customRange4" id="rangeValue" aria-hidden="true"></output> -->
             </div>
             <div class="mb-3">
-                <label for="comment" class="form-lable">Comment</label><br>
+                <label for="comment" class="form-lable mb-2">Comment</label><br>
                 <textarea class="form-control" name="review[comment]" id="comment" cols="30" rows="5" required></textarea>
                 <div class="invalid-feedback">Can't be left empty</div>
             </div>
