--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -25,10 +25,14 @@
         referrerpolicy="no-referrer"
     />
 </head>
+
 <body>
     <%- include("../includes/navbar.ejs") %>
-
-    <div class="container"><%- body %></div>
+    
+    <div class="container">
+        <%- include("../includes/flash.ejs") %>
+        <%- body %>
+    </div>
 
     <%- include("../includes/footer.ejs") %>
     
