--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -24,6 +24,10 @@
         crossorigin="anonymous" 
         referrerpolicy="no-referrer"
     />
+    <link href="https://api.mapbox.com/mapbox-gl-js/v3.13.0/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v3.13.0/mapbox-gl.js"></script>
+    <head>
+    <link href="/css/rating.css" rel="stylesheet">
 </head>
 
 <body>
