--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,10 +1,121 @@
 <% layout("layouts/boilerplate") %>
-    <h3 class="title">All Listing</h3>
-    <!-- <form method="GET" action="/listings/new">
-        <button>Create New Listing</button>
-    </form> -->
+    <style>
+        #filters {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+        }
 
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-2">
+        .filter {
+            text-align: center;
+            margin-right: 1.5rem;
+            margin-top: 1rem;
+            opacity: 0.7;
+        }
+        
+        .filter p {
+        position: relative;
+        display: inline-block;
+        font-size: 0.8rem;
+        padding-bottom: 7px;
+        }
+
+        .filter:hover {
+            opacity: 1;
+            cursor: pointer;
+        }
+
+        .filter p::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            height: 2px;
+            width: 100%;
+            background-color: black; /* change to your preferred color */
+            transform: scaleX(0);
+            transform-origin: left;
+            transition: transform 0.4s ease-in-out;
+        }
+
+        .filter:hover p::after {
+            transform: scaleX(1);
+        }
+
+        .tax-info {
+            display: none;
+        }
+
+        .tax {
+            opacity: 0.7;
+        }
+
+        .tax-toggle {
+            border: 2px solid rgba(0, 0, 0, 0.55);
+            border-radius: 1rem;
+            height: 3.25rem;
+            padding: 0.8rem;
+            margin-left: 1.5rem; /*right most point of the page below the navbar*/
+            display: flex;
+            align-items: center;
+        }
+    </style>
+
+    <div id="filters">
+        <div class="filter">
+            <div><i class="fa-solid fa-fire"></i></div>
+            <p>Trending</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-bed"></i></div>
+            <p>Rooms</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-mountain-city"></i></div>
+            <p>Iconic Cities</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-mountain"></i></div>
+            <p>Mountains</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-brands fa-fort-awesome"></i></div>
+            <p>Castles</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-person-swimming"></i></div>
+            <p>Amazing Pools</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-campground"></i></div>
+            <p>Camping</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-cow"></i></div>
+            <p>Farms</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-snowflake"></i></div>
+            <p>Arctic</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-igloo"></i></div>
+            <p>Domes</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-ship"></i></div>
+            <p>Boats</p>
+        </div>
+
+        <div class="tax-toggle">
+            <div class="form-switch form-check-reverse">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label tax" for="flexSwitchCheckDefault">Display total after Taxes</label>
+            </div>
+        </div>
+    </div>
+
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-2 mt-3">
         
         <% for (let listings of allListings) { %>
         <a href="/listings/<%= listings._id %> " class="listing-link">
@@ -19,6 +130,7 @@
                 <p class="card-text">
                     <b><%= listings.title %></b><br>
                     &#8377;<%= listings.price.toLocaleString("en-IN") %> /night
+                    <emp class="tax-info">&nbsp; +18% GST</emp>
                 </p>
             </div>
         </div>
@@ -26,3 +138,17 @@
         <% } %>
         
     </div>
+
+    <script>
+        let taxSwitch = document.getElementById("flexSwitchCheckDefault");
+        taxSwitch.addEventListener("click", () => {
+            let taxInfo = document.getElementsByClassName("tax-info");
+            for(info of taxInfo){
+                if(info.style.display != "inline"){
+                    info.style.display = "inline";
+                } else {
+                    info.style.display = "none";
+                }
+            }
+        });
+    </script>
