--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -4,7 +4,7 @@
     <div class="col-8 offset-2">
     <br>
     <h3 class="title">Create New Listings</h3>
-    <form class="needs-validation" method="POST" action="/listings" novalidate >
+    <form class="needs-validation" method="POST" action="/listings" novalidate enctype="multipart/form-data"> <!-- enctype used to send files -->
 
         <div class="mb-3">
             <label for="title" class="form-lable">Title</label>
@@ -21,8 +21,8 @@
         </div>
 
         <div class="mb-3">
-            <label for="image" class="form-lable">Image</label>
-            <input class="form-control" type="text" placeholder="Enter Image link/url" name="listing[image]">
+            <label for="image" class="form-lable">Upload Image</label>
+            <input class="form-control" type="file" name="listing[image]" required>
         </div>
 
         <div class="row">
