--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,4 +1,9 @@
 <% layout("layouts/boilerplate") %>
+<script>
+    const mapToken = "<%= process.env.MAP_TOKEN %>";
+    const listing = <%-JSON.stringify(listing)%>;
+</script>
+
 <div class="row">
     <div class="col-8 offset-3">
     <br>
@@ -38,11 +43,28 @@
         <h4>Leave a Review</h4>
         <hr>
         <form class="needs-validation" method="POST" action="/listings/<%= listing._id %>/reviews" novalidate>
-            <div class="mb-3 mt-3">
-                <label for="rating">Rating</label><br>
+            <!-- <div class="mb-3 mt-3">
+                
                 <input class="form-range" name="review[rating]" type="range" min="1" max="5" id="rating"><br>
-                <!-- <output for="customRange4" id="rangeValue" aria-hidden="true"></output> -->
+            </div> -->
+
+            <div class="mb-3 mt-3">
+            <label for="rating">Rating</label><br>
+            <fieldset class="starability-basic mt-2">
+                <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+                <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                <label for="first-rate1" title="Terrible">1 star</label>
+                <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                <label for="first-rate2" title="Not good">2 stars</label>
+                <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                <label for="first-rate3" title="Average">3 stars</label>
+                <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                <label for="first-rate4" title="Very good">4 stars</label>
+                <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                <label for="first-rate5" title="Amazing">5 stars</label>
+            </fieldset>
             </div>
+
             <div class="mb-3">
                 <label for="comment" class="form-lable mb-2">Comment</label><br>
                 <textarea class="form-control" name="review[comment]" id="comment" cols="30" rows="5" required></textarea>
@@ -52,28 +74,36 @@
             <button class="btn btn-outline-dark">Submit</button>
         </form>
         <br>
-        <hr>
         <% } %>
 
         <% //showing all the reviews %>
 
-        <h5 class="mb-4">All Reviews</h5>
+        <% if (listing.reviews.length >0) { %> 
+        <hr>
         <div class="row">
-
+        <h5 class="mb-4">All Reviews</h5>
         <% for(review of listing.reviews) { %>
             <div class="card col-5 ms-3 mb-3">
                 <div class="card-body card-review">
                     <h5 class="card-title">@<%= review.author.username %></h5>
+                    <p class="card-text starability-result" data-rating="<%= review.rating %>">
+                        Rated: 3 stars
+                    </p>
                     <p class="card-text"><%= review.comment %></p>
-                    <p class="card-text"><%= review.rating %> Stars</p>
                     <form method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
                         <button class="btn btn-dark mb-2">Delete</button>
                     </form>
                 </div>
             </div>
         <% } %>
-
         </div>
+        <% } %>
     </div>
-<br>
+    <div class="col-8 offset-3 mt-3 mb-3">
+            <h3>Where you'll be</h3>
+            <div id="map"></div>
+            <br>
+    </div>
 </div>
+
+<script src="/javascript/map.js"></script>
