--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -29,8 +29,8 @@
 
       <div class="navbar-nav ms-auto">
         <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search destinations">
-          <button class="btn btn-search" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
+          <input class="form-control me-2" type="search" style="font-size: 0.8rem;" placeholder="Search destinations">
+          <button class="btn btn-search" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
         </form>
       </div>
 
