--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,14 +1,16 @@
 <footer>
     <div class="f-info">
+        <div class="f-info-brand">&copy;Wanderlust Private Limited</div>
+        
         <div class="f-info-socials">
             <i class="fa-brands fa-square-facebook"></i>
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-linkedin"></i>
         </div>
-        <div class="f-info-brand">&copy;WanderLust Private Limited</div>
         <div class="f-info-links">
-            <a href="/privacy">Privacy</a>
-            <a href="/terms">Terms</a>
+            <a class="me-2" target="_blank" href="">Privacy</a>
+            <a class="me-2" target="_blank" href="">Terms & Conditions</a>
+            <a class="me-2" target="_blank" href="">Support</a>
         </div>
     </div>
 </footer>
