--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,8 +1,8 @@
 <% layout("layouts/boilerplate") %>
 <div class="row">
-    <div class="col-8 offset-2">
+    <div class="col-12 col-sm-10 col-md-8 col-lg-6 offset-sm-1 offset-md-2 offset-lg-3">
         <br>
-        <h3 class="title">Edit your Listings</h3>
+        <h4 class="title">Edit your Listings</h4>
         <form method="POST" action="/listings/<%= listings._id %>?_method=PUT" enctype="multipart/form-data" class="needs-validation">
 
             <div class="mb-3">
@@ -48,7 +48,7 @@
                 <div class="invalid-feedback">Location should be valid</div>
             </div>
             
-            <button class="btn btn-dark mt-3 edit-btn">Edit</button>
+            <button class="btn btn-dark mt-2 mb-3 edit-btn">Edit</button>
         </form>
     </div>
 </div>
