--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,9 +1,9 @@
 <% layout("layouts/boilerplate") %>
 
 <div class="row">
-    <div class="col-8 offset-2">
+    <div class="col-12 col-sm-10 col-md-8 col-lg-6 offset-sm-1 offset-md-2 offset-lg-3">
     <br>
-    <h3 class="title">Create New Listings</h3>
+    <h4 class="title">Create New Listings</h4>
     <form class="needs-validation" method="POST" action="/listings" novalidate enctype="multipart/form-data"> <!-- enctype used to send files -->
 
         <div class="mb-3">
