--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -10,7 +10,7 @@
         <div class="f-info-links">
             <a class="me-2" target="_blank" href="">Privacy</a>
             <a class="me-2" target="_blank" href="">Terms & Conditions</a>
-            <a class="me-2" target="_blank" href="">Support</a>
+            <a class="me-2" target="_blank" href="https://github.com/prnjxl/wander-lust/blob/master/markdown/privacy.md">Support</a>
         </div>
     </div>
 </footer>
